--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "catkin_ws/src/eca_a9"]
 	path = catkin_ws/src/eca_a9
 	url = https://github.com/uuvsimulator/eca_a9
+[submodule "catkin_ws/src/barracuda_description"]
+	path = catkin_ws/src/barracuda_description
+	url = git@github.com:usc-robosub/barracuda_description.git
