--- a/catkin_ws/src/gate_description/package.xml
+++ b/catkin_ws/src/gate_description/package.xml
@@ -5,6 +5,9 @@
     URDF Description package for competition gate obstacle.
     Contains 3D models and launch files for robosub gate.
   </description>
+  <maintainer email="jiangmy@usc.edu">USC RoboSub Team</maintainer>
+  <license>MIT</license>
+  
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roslaunch</depend>
   <depend>robot_state_publisher</depend>
