--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,36 +1,75 @@
 name: Docker Publish - barracuda-simulation
 
 on:
+  schedule:
+    - cron: "25 1 * * *"
   push:
-    branches:
-      - main
+    branches: ["main"]
+    tags: ["v*.*.*"]
+  pull_request:
+    branches: ["main"]
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
       packages: write
+      id-token: write
 
     steps:
-      - name: Checkout repo (with submodules)
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: true
+
+      - name: Update submodules
+        run: |
+          git submodule init
+          git submodule update --remote
+
+      # QEMU enables building non-native architectures (arm64) on x86 runners
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Install cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@v3.5.0
+        with:
+          cosign-release: "v2.2.4"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry (GHCR)
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push barracuda-simulation
-        run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/barracuda-simulation:latest
-          docker build --no-cache -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push arm64 image (Jetson Orin / RPi)
+        id: build-and-push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # Optional: pin L4T version if needed for Jetson
+          build-args: |
+            L4T_TAG=r36.3.0
