--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - WAYLAND_DISPLAY
       - XDG_RUNTIME_DIR
       # NVIDIA runtime env
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=all
+      # Optional toggles (uncomment to use):
+      # - GUI=false            # run headless server (no Gazebo GUI)
+      # - SOFTWARE_GL=1        # force software OpenGL to avoid NV-GLX errors
     # Request all GPUs (Compose v2+)
-    gpus: all
